samples/_failures_safe/1761508579_c84042_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f907e126.c: In function ‘main’:
./samples/SAFE/__tmp_f907e126.c:173:12: error: missing terminating " character
  173 |     printf("Enter arithmetic expressions (empty line to exit):
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f907e126.c:173:5: error: expected expression at end of input
  173 |     printf("Enter arithmetic expressions (empty line to exit):
      |     ^~~~~~
./samples/SAFE/__tmp_f907e126.c:173:5: error: expected declaration or statement at end of input
